As of 7/5/24 - Projects/Homeworks

--- a/ML Datasets/Class Lecture and HW Sol/08_svm_notebook.ipynb
+++ b/ML Datasets/Class Lecture and HW Sol/08_svm_notebook.ipynb
@@ -364,10 +364,8 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "X_train_scaled = pd.DataFrame(scaler.fit_transform(\n",
-    "    X_train), columns=X_train.columns, index=X_train.index)\n",
-    "X_test_scaled = pd.DataFrame(scaler.transform(\n",
-    "    X_test), columns=X_train.columns, index=X_test.index)\n",
+    "X_train_scaled = pd.DataFrame(scaler.fit_transform(X_train), columns=X_train.columns, index=X_train.index)\n",
+    "X_test_scaled = pd.DataFrame(scaler.transform(X_test), columns=X_train.columns, index=X_test.index)\n",
     "\n",
     "print(X_train_scaled.head())"
    ]
