--- a/Data Mining/Diallo_HW_3.ipynb
+++ b/Data Mining/Diallo_HW_3.ipynb
@@ -11,6 +11,15 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = "
+   ]
   }
  ],
  "metadata": {
